# raytracer

./: CMakeLists.txt  README.md
raytracer/: image.h  raytracer.h
raytracer-geom/: geometry.h  intersection.h  ray.h  sphere.h  triangle.h  vector.h
raytracer-reader/: material.h  object.h  scene.h
